Fix avatar width having scrollbar overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,12 +154,13 @@ a {
 }
 
 .avatar {
-	position: absolute;
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
 }
 
 .avatar-img {
